--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,349 @@
+
 .App {
   text-align: center;
+  font-family: monofont1;
+  font-size: 30px;
+  background: url(images/cross1.png)  repeat;
+  background-color:  rgb(255, 181, 211);
+  background-size: 70px 70px , cover ;
+}
+h1{
+  font-size: 60px;
+}
+.Cardbody{
+  border: 50px #ff0067
+}
+.navbar{
+  background:white;
+}
+li{
+  text-decoration: none;
+  color:  #ff0067;
+  margin-right:1em;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+li:hover{
+  text-decoration: none;
+  color:  black;
+  
+    }
+    
+* {
+  box-sizing: border-box;
+}
+.boxbody{
+  position: relative;
+  grid-column-start: 6;
+  grid-column-end: 8;
+  margin-top: 3%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.box-1 {
+  position: absolute;
+  top: 10px;
+  left: 20px;
+  z-index: 2;
+  background-color: white;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.box-2 {
+  position: absolute;
+  top: 20px;
+  left: 10px;
+  z-index: 1;
+  background-color: white;
+}
+
+.box {
+  position: absolute;
+  min-height: 1%;
+  top: 0px;
+  left: 30px;
+  z-index: 3;
+  background-color: white;
+}
+
+.box_header{
+   color: #ff0067;
+  position: relative;
+  min-height: 1%;
+  border: 4px solid  #ff0067;
+  text-align: center;
+  line-height: 40px;
+  font-size: 3rem;
+  padding :1%;
+
+}
+.box_exit {
+  position: relative;
+  float:right;
+  border: 3px solid  #ff0067;
+  line-height: 20px;
+  padding: 6px;
+ 
+}
+.box_content{
+  border: 4px solid  #ff0067;
+  height: 300px;
+  width: 300px;
+  border-top: none;
+  padding: 15px;
+  
+  
+}
+.skillz{
+  display: inline;
+ justify-content: center;
+}
+.skillz .row1{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  height:100px
+  
+}
+.skillz .row2{
+  display: flex;
+  justify-content: space-between;
+  height:100px
+}
+.skillz .row3{
+  display: flex;
+  justify-content: space-between;
+  height:100px
 }
 
-.App-link {
-  color: #61dafb;
+* {
+  box-sizing: border-box;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tribody {
+  position: relative;
+  margin-top: 5%;
+  margin-left: 35%;
 }
+
+.tribox-1 {
+  position: absolute;
+  top: 10px;
+  left: 20px;
+  z-index: 2;
+  background-color: white;
+}
+
+.tribox-2 {
+  position: absolute;
+  top: 20px;
+  left: 10px;
+  z-index: 1;
+  background-color: white;
+}
+
+.tribox {
+  position: absolute;
+  top: 0px;
+  left: 30px;
+  z-index: 3;
+  background-color: white;
+  
+}
+
+.tribox__header{
+  color: #ff0067;
+  position: relative;
+  min-height: 1%;
+  border: 4px solid  #ff0067;
+  text-align: center;
+  line-height: 40px;
+  font-size: 3rem;
+  padding :1%;
+}
+.tribox__exit {
+  color: #ff0067;
+  position: relative;
+ float:right;
+  border: 3px solid  #ff0067;
+  line-height: 20px;
+  padding: 6px;
+  
+}
+.tribox__content{
+  border: 4px solid  #ff0067;
+  min-height: 500px;
+  width: 900px;
+  border-top: none;
+  padding: 10px;
+}
+
+
+.socials svg{
+  height:5rem;
+  width:10rem;
+}
+------
+
+* {
+  box-sizing: border-box;
+}
+
+
+.body2 {
+  margin-left: 10%;
+}
+
+.box2 {
+  width: 80%;
+  background-color: white;
+}
+
+.box_header2{
+  color: #ff0067;
+  position: relative;
+  min-height: 1%;
+  border: 4px solid  #ff0067;
+  text-align: center;
+  font-size: 3rem;
+  line-height: 40px;
+  padding :1%
+  
+}
+.box_exit2{
+  
+  color: #ff0067;
+  position: relative;
+  float: right;
+  border: 3px solid  #ff0067;
+  line-height: 20px;
+  padding: 6px;
+  
+}
+.box_content2{
+  position: relative;
+  border: 4px solid  #ff0067;
+  min-height: 25rem;
+  border-top: none;
+  padding: 2%;
+
+}
+
+.bitbubblefloat{
+  position: absolute ;
+  height:50%;
+  top: 110%;
+  right:75%;
+  z-index:3;
+}
+.bitsabs{
+height:300px;
+z-index: 3;
+margin-bottom: 40rem
+}
+
+.bitmailfloat {
+  position:relative;
+  z-index:3;
+}
+.bitmailfloat2 {
+  position: relative;
+  z-index:3;
+}
+.bitcalfloat {
+  position: relative;
+  z-index:3;
+}
+    .bithandiconfloat {
+      position: absolute;
+      left:72% ;
+      top: 30%;
+      height:45%;
+    }
+    
+
+
+.styledbitheart1{
+position: absolute;
+height:45%;
+ top:-3%;
+right:70vw;
+z-index:2
+}
+.styledbitheartwhite{
+  position: absolute;
+  height:35%;
+  top: 25%;
+right:80%;
+z-index:3
+}
+.styledbitheart2{
+  position: absolute;
+  height: 20%;
+  top: 50%;
+right:76%;
+z-index:4
+}
+.bithearts{
+float: right
+}
+.bitname{
+  height: 90%;
+  width:90%
+}
+.bitmailfloat{
+  height:25rem;
+  position:relative;
+  left:-55% ;
+  bottom:130px;
+  z-index:4
+}
+.bitmailfloat2{
+  height:20rem;
+  position: relative;
+  z-index:3;
+  left:20%;
+  bottom:70px;
+}
+.bitcalfloat{
+  height:20rem;
+  position: relative;
+  z-index:3
+}
+
+#landing{
+  height:100vh
+}
+#contact{
+  height:100vh
+}
+#about{
+  height:100vh;
+  display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#projects{
+  height:100vh;
+  width:100vw
+}
+#photo{
+  height:100vh;
+  width:100vw
+}
+.resumewrap{
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+
+}
+.resumepic{
+max-width: 100%;
+    max-height:100%;
+    display: block;
+    object-fit: cover;
+  grid-column-start: 1;
+  grid-column-end: 5;
+  border: 3px solid  #ff0067;
+margin:15%;
+margin-left:12%
+
+}
+
+
+
