--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+@font-face {
+  font-family: 'monofont1';
+  src: local('monofont1'), url(./fonts/monofont1.ttf) format('truetype');
+}
