--- a/src/App.css
+++ b/src/App.css
@@ -7,19 +7,46 @@
   background-color:  rgb(255, 181, 211);
   background-size: 70px 70px , cover ;
 }
+
+/* bitnav */
+
+/* ul.nav {
+  width:90%;
+  font-size: 3rem;
+  text-align:center;
+  color: #ff0067;
+}
+.nav li { 
+  display:inline-block;
+  width:20%;
+}
+.nav a {
+  text-align:center;
+  padding-bottom:50px;
+  display:block;
+}
+li:focus{
+  text-decoration: none;
+  color:  black;
+   
+ } */
+
+
 h1{
   font-size: 60px;
 }
 .Cardbody{
   border: 50px #ff0067
 }
-.navbar{
+.navbar {
   background:white;
 }
+
 li{
   text-decoration: none;
   color:  #ff0067;
   margin-right:1em;
+  
 }
 
 li:hover{
@@ -32,10 +59,9 @@ li:hover{
   box-sizing: border-box;
 }
 .boxbody{
-  position: relative;
-  grid-column-start: 6;
-  grid-column-end: 8;
-  margin-top: 3%;
+  position: absolute;
+  margin-left: 70%;
+  
 }
 
 .box-1 {
@@ -89,7 +115,6 @@ li:hover{
   border-top: none;
   padding: 15px;
   
-  
 }
 .skillz{
   display: inline;
@@ -112,13 +137,135 @@ li:hover{
   height:100px
 }
 
+------
+
+* {
+  box-sizing: border-box;
+}
+
+
+.body2 {
+  padding-top: 8%;
+  margin-left: 10%;
+}
+
+.box2 {
+  width: 60%;
+  background-color: white;
+}
+
+.box_header2{
+  color: #ff0067;
+  position: relative;
+  min-height: 1%;
+  border: 4px solid  #ff0067;
+  text-align: center;
+  font-size: 3rem;
+  line-height: 40px;
+  padding :1%
+  
+}
+.box_exit2{
+  
+  color: #ff0067;
+  position: relative;
+  float: right;
+  border: 3px solid  #ff0067;
+  line-height: 20px;
+  padding: 6px;
+  
+}
+.box_content2{
+  position: relative;
+  border: 4px solid  #ff0067;
+  min-height: 25rem;
+  border-top: none;
+  padding: 2%;
+
+}
+.resumewrap{
+  max-width: 100%;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+}
+.resumepic{
+  max-width: 100%;
+  
+}
+.bitsabs{
+  margin-top: 20%;
+  margin-left: -100px ;
+    height:40rem;
+    grid-column-start: 4;
+  grid-column-end: 5;
+}
+.bitbubblefloat2{
+  position: relative;
+  height:30%;
+  bottom:35%;
+  right:50%;
+  
+
+  /* position: absolute ;
+  height:50%;
+  top: 90%;
+  right:75%;
+  z-index:3; */
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.bodyres {
+  margin-left: 10%;
+  max-width: 100%;
+  grid-column-start: 1;
+  grid-column-end: 4;
+ 
+}
+
+.boxres {
+  background-color: white;
+}
+
+.box_headerres{
+  color: #ff0067;
+  position: relative;
+  min-height: 1%;
+  border: 4px solid  #ff0067;
+  text-align: center;
+  font-size: 3rem;
+  line-height: 40px;
+  padding :1%
+  
+}
+.box_exitres{
+  
+  color: #ff0067;
+  position: relative;
+  float: right;
+  border: 3px solid  #ff0067;
+  line-height: 20px;
+  padding: 6px;
+  
+}
+.box_contentres{
+  position: relative;
+  border: 4px solid  #ff0067;
+  min-height: 25rem;
+  border-top: none;
+  padding: 2%;
+
+}
+
 * {
   box-sizing: border-box;
 }
 
 .tribody {
-  position: relative;
-  margin-top: 5%;
+  position: absolute;
+  margin-top: 10%;
   margin-left: 35%;
 }
 
@@ -179,64 +326,15 @@ li:hover{
   height:5rem;
   width:10rem;
 }
-------
-
-* {
-  box-sizing: border-box;
-}
-
-
-.body2 {
-  margin-left: 10%;
-}
-
-.box2 {
-  width: 80%;
-  background-color: white;
-}
-
-.box_header2{
-  color: #ff0067;
-  position: relative;
-  min-height: 1%;
-  border: 4px solid  #ff0067;
-  text-align: center;
-  font-size: 3rem;
-  line-height: 40px;
-  padding :1%
-  
-}
-.box_exit2{
-  
-  color: #ff0067;
-  position: relative;
-  float: right;
-  border: 3px solid  #ff0067;
-  line-height: 20px;
-  padding: 6px;
-  
-}
-.box_content2{
-  position: relative;
-  border: 4px solid  #ff0067;
-  min-height: 25rem;
-  border-top: none;
-  padding: 2%;
-
-}
 
 .bitbubblefloat{
   position: absolute ;
   height:50%;
-  top: 110%;
+  top: 90%;
   right:75%;
   z-index:3;
 }
-.bitsabs{
-height:300px;
-z-index: 3;
-margin-bottom: 40rem
-}
+
 
 .bitmailfloat {
   position:relative;
@@ -257,8 +355,6 @@ margin-bottom: 40rem
       height:45%;
     }
     
-
-
 .styledbitheart1{
 position: absolute;
 height:45%;
@@ -299,12 +395,12 @@ float: right
   position: relative;
   z-index:3;
   left:20%;
-  bottom:70px;
+  top:500px;
 }
 .bitcalfloat{
   height:20rem;
   position: relative;
-  z-index:3
+  z-index:8
 }
 
 #landing{
@@ -313,27 +409,25 @@ float: right
 #contact{
   height:100vh
 }
+
 #about{
   height:100vh;
-  display: flex;
+  /* display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
 }
 #projects{
   height:100vh;
   width:100vw
 }
-#photo{
+/* #photo{
   height:100vh;
   width:100vw
-}
-.resumewrap{
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
+} */
 
-}
-.resumepic{
-max-width: 100%;
+
+ 
+/* max-width: 100%;
     max-height:100%;
     display: block;
     object-fit: cover;
@@ -341,9 +435,9 @@ max-width: 100%;
   grid-column-end: 5;
   border: 3px solid  #ff0067;
 margin:15%;
-margin-left:12%
+margin-left:12% */
 
-}
+
 
 
 
